# CommitKit

./: Cargo.toml  Makefile  README.md  build.rs  ck.toml.example
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
src/analysis/: context.rs  diff.rs  inference.rs  mod.rs  warnings.rs
src/cli/: args.rs  dispatch.rs  mod.rs
src/commit/: builder.rs  fix.rs  message.rs  mod.rs  preview.rs
src/config/: default.rs  loader.rs  mod.rs  schema.rs
src/error/: mod.rs
src/git/: commands.rs  diff.rs  mod.rs  repo.rs
src/hooks/: manager.rs  mod.rs  templates.rs
src/monorepo/: detector.rs  mod.rs  scope.rs
src/plugins/: abi.rs  loader.rs  mod.rs  runtime.rs
src/rules/: builtin.rs  engine.rs  mod.rs  validator.rs
src/security/: mod.rs  secrets.rs  signing.rs
src/smart/: generator.rs  mod.rs  semantic.rs
