# Author: Eshan Roy
# SPDX-License-Identifier: MIT

[package]
name = "ck"
version = "1.0.0"
edition = "2021"
authors = ["Eshan Roy"]
license = "MIT"
description = "Intelligent Git commit assistant"
repository = "https://github.com/eshanized/commitkit"
keywords = ["git", "commit", "conventional-commits", "cli", "monorepo"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "ck"
path = "src/main.rs"

[lib]
name = "ck"
path = "src/lib.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env", "wrap_help"] }

# Terminal UI
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# File system
dirs = "5"
glob = "0.3"
walkdir = "2"

# Error handling
anyhow = "1"
thiserror = "1"

# Regex
regex = "1"
lazy_static = "1"

# Git
git2 = "0.18"

# Templating
handlebars = "5"

# WASM plugins
wasmtime = "17"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[build-dependencies]
vergen = { version = "8", features = ["git", "gitcl"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
